# RenderTech

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build-shader.bat
inc/imgui/: CMakeLists.txt
lib/: assimp-vc142-mt.lib
src/: Engine.cpp  Engine.h  EngineThread.cpp  EngineThread.h  main.cpp
src/Engine/: EngineDef.h
src/Engine/Core/: Core.cpp  Core.h
src/Engine/Core/Utils/: Enum.h  Event.h  Factory.h
src/Engine/Math/: MathDef.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Rotator.cpp  Rotator.h  Vector.cpp  Vector.h
src/Engine/Object/: BaseObject.h  MetaObject.h  Object.cpp  Object.h  ObjectArgument.cpp  ObjectArgument.h  ObjectType.cpp  ObjectType.h
src/Engine/Object/Class/: Buffer.cpp  Buffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Target.cpp  Target.h  Texture.cpp  Texture.h
src/Engine/Object/Component/: CameraComponent.cpp  CameraComponent.h  EntityComponent.cpp  EntityComponent.h  InputComponent.cpp  InputComponent.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  MovementComponent.cpp  MovementComponent.h  PointLightComponent.cpp  PointLightComponent.h  SceneComponent.cpp  SceneComponent.h
src/Engine/Object/Entity/: Actor.cpp  Actor.h  Entity.cpp  Entity.h
src/Engine/Object/EntityController/: EntityController.cpp  EntityController.h
src/Engine/Object/Global/: ECBStorage.cpp  ECBStorage.h  EngineConfig.cpp  EngineConfig.h
src/Engine/Rendering/: MeshAttributes.cpp  MeshAttributes.h  MeshDescription.cpp  MeshDescription.h  ShaderDescription.cpp  ShaderDescription.h  TextureDescription.cpp  TextureDescription.h  Types.h
src/Engine/Tools/: Event.h  Factory.h
src/Scripts/: ChangeableSolidObject.cpp  ChangeableSolidObject.h  LightObject.cpp  LightObject.h  Spectator.cpp  Spectator.h  VisibleObject.cpp  VisibleObject.h
src/Shader/: ACES.hlsli  BasePSShader.hlsl  BaseVSShader.hlsl  DefaultPSShader.hlsl  EngineCommon.hlsli  EngineCommonPBR.hlsli  LightPSShader.hlsl  LightVSShader.hlsl  PSLightShader.hlsl  PSMeshShader.hlsl  PSSkyboxShader.hlsl  PSTestShader.hlsl  VSLightShader.hlsl  VSMeshShader.hlsl  VSSkyboxShader.hlsl  VSTestShader.hlsl
src/Shader/Utils/: PSCubeMapGeneration.hlsl  VSCubeMapGeneration.hlsl
src/TestXML/: material.xml  mesh.rto  mesh.xml
(+190 files in other folders)
