cmake_minimum_required(VERSION 3.5)

project(RenderTech VERSION 0.1 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_PROJECT_SOURCE_DIRECTORY src)
set(CMAKE_PROJECT_INCLUDE_DIRECTORY inc)
set(CMAKE_PROJECT_LIBRARY_DIRECTORY lib)

file(GLOB_RECURSE PROJECT_SOURCES
    ${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_SOURCE_DIRECTORY}/*.cpp
    ${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_SOURCE_DIRECTORY}/*.hpp
    ${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_SOURCE_DIRECTORY}/*.c
    ${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_SOURCE_DIRECTORY}/*.h
)

file(GLOB PROJECT_LIBRARIES
    ${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_LIBRARY_DIRECTORY}/*.lib
)

add_executable(RenderTech WIN32
    ${PROJECT_SOURCES}
)

target_link_directories(RenderTech PUBLIC
    ${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_LIBRARY_DIRECTORY}
)

target_include_directories(RenderTech PUBLIC
    ${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_SOURCE_DIRECTORY}
    ${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_INCLUDE_DIRECTORY})

target_link_libraries(RenderTech PRIVATE
    ${PROJECT_LIBRARIES}
    d3d11 dxgi dxguid DXGI D3DCompiler
    assimp-vc142-mt FreeImage Xinput ImGui
)

add_subdirectory(${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_INCLUDE_DIRECTORY}/imgui)
